# nightcore_bot

./: README.md  adisz_czemu.txt  bladee_egobaby_config.json  expression_Ecco2k.txt  fan_pages.txt  kanye_hh.txt  korden_angela.txt  meson.build  post_text.txt  schafter_da_vinci.txt  tenten.txt  torak_i_see_me.json  welcometosttropez_config.json
include/: main.h
libs/: meson.build
libs/analyse/: meson.build
libs/analyse/include/: analyse.h
libs/analyse/src/: analyse.c
libs/machine_learning/: meson.build
libs/machine_learning/include/: data_structures.h  machine_learning.h  ml.h  ml_nightcore.h
libs/machine_learning/src/: machine_learning.c  ml_nightcore.c
libs/nightcore/: meson.build
libs/nightcore/include/: night_error_codes.h  nightcore.h
libs/nightcore/src/: nightcore.c
libs/utils/: meson.build
libs/utils/include/: utils.h
libs/utils/source/: utils.c
libs/utils/src/: utils.c
source/: main.c
